<resources>
    <string name="app_name">Selekni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_proposer_co">ProposerCo</string>
    <string name="title_activity_proposer_cov">ProposerCov</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="pt_dep">Point de départ</string>
    <string name="pt_arv">Point d\'arrivée</string>
    <string name="date">Date</string>
    <string name="imageLogo">image logo</string>
    <string name="souvenir">Se souvenir de moi.</string>
    <string name="envoyer">Envoyer</string>
    <string name="sujet">Sujet</string>
    <string name="message">Message</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="h">Homme</string>
    <string name="f">Femme</string>
    <string name="valider">Valider</string>
    <string name="confMDP">Confirmer mot de passe</string>
    <string name="cgu">En vous inscrivant vous acceptez les règles du CGU</string>
    <string name="annee">Année de naissance</string>
    <string name="chercher">Chercher</string>
    <string name="chooseNewMDP">Choisissez un nouveau mot de passe</string>
    <string name="TinfoPerso">___Informations personnelles___</string>
    <string name="annuler">Annuler</string>
    <string name="tel">Téléphone</string>
    <string name="marque">Marque*</string>
    <string name="modele">Modèle*</string>
    <string name="couleur">Couleur</string>
    <string name="supprimeV">Supprimer véhicule</string>
    <string name="modifV">Modifier véhicule</string>
    <string name="immat">Immatriculation*</string>
    <string name="notAfficheTel">Ne pas afficher mon numéro de téléphone publiquement.</string>
    <string name="newMDP">Nouveau mot de passe</string>
    <string name="changeMDP">Changer le mot de passe</string>
    <string name="confirmMDP">Confirmer</string>
    <string name="addPhoto">Ajouter une photo</string>
    <string name="add">Ajouter</string>
    <string name="TPrefere">________Préférences________</string>
    <string name="musique">Musique</string>
    <string name="cigarette">Cigarette</string>
    <string name="discussion">Discussion</string>
    <string name="discuMoy">Discussion moyenne</string>
    <string name="discuBien">Discussion forte</string>
    <string name="discuFaible">Discussion faible</string>
    <string name="fumInif">Indifferent à la cigarette</string>
    <string name="fumSensible">Sensible à la cigarette</string>
    <string name="fumFav">Favorable à la cigarette</string>
    <string name="musicFav">Aime la music</string>
    <string name="musicDef">n\'aime pas la music</string>
    <string name="fmusicIndif">Indifferent à la music</string>
    <string name="decrivezVous">Décrivez vous</string>
    <string name="time">heure de départ</string>
    <string name="moreI">Plus d\'informations&#8230;</string>
    <string name="entreH">Covoiturage entre Homme</string>
    <string name="entreF">Covoiturage entre Femme</string>
    <string name="nbPlace">Nombre de place</string>
    <string name="proposer">Proposer un covoiturage</string>
    <string name="photoV">Photo du véhicule</string>
    <string name="TVehicule">___________Véhicule__________</string>
    <string name="actualMDP">Mot de passe actuel</string>
    <string name="cherchCo">Chercher un covoiturage</string>
    <string name="mdpOublie">Mot de passe oublié ?</string>
    <string name="mdp">Mot de passe</string>
    <string name="connect">connection</string>
    <string name="action_sign_in">Connection</string>
    <string name="action_sign_in_short">Connection</string>
    <string name="action_subscribe_short">Inscription</string>
    <string name="error_invalid_email">Adresse Email invalide </string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrecte</string>
    <string name="error_field_required">Champ obligatoire</string>
    <string name="moreDetails">Voir détails</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
