<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:background="@color/white"
    android:paddingTop="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proposer"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pt_dep"
            android:drawableRight="@drawable/dep"
            android:drawableEnd="@drawable/dep"
            android:inputType="textPersonName"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editText16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pt_arv"
            android:drawableRight="@drawable/arv"
            android:drawableEnd="@drawable/arv"
            android:inputType="textPersonName"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editText29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:drawableRight="@drawable/date"
            android:drawableEnd="@drawable/date"
            android:inputType="date"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editText30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/time"
            android:drawableRight="@drawable/time"
            android:drawableEnd="@drawable/time"
            android:inputType="time"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editText31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nbPlace"
            android:inputType="number"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entreF"
            android:textColor="@color/MyRose"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entreH"
            android:textColor="@color/buee"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editText33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/moreI"
            android:inputType="textMultiLine"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/Myblue"
            android:text="@string/valider"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:textSize="20sp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>
