
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:background="@color/white"
    android:paddingTop="60dp">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/TPrefere"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="341dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:focusable="true">

        <LinearLayout
            android:layout_width="123dp"
            android:layout_height="428dp"
            android:orientation="vertical"
            android:weightSum="1"
            android:focusable="true">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:text="@string/musique"
                android:textAlignment="center"
                android:textColor="@color/bleu"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="0.15"
                app:srcCompat="@drawable/mrouge"
                android:layout_gravity="center"
                android:contentDescription="@string/musicDef"/>

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/mvert"
                android:layout_gravity="center"
                android:contentDescription="@string/musicFav"/>

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/mgris"
                android:layout_gravity="center"
                android:contentDescription="@string/fmusicIndif"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="126dp"
            android:layout_height="426dp"
            android:orientation="vertical"
            android:weightSum="1"
            android:focusable="true">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:text="@string/cigarette"
                android:textAlignment="center"
                android:textColor="@color/bleu"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>


            <ImageButton

                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="0.15"
                app:srcCompat="@drawable/frouge"
                android:layout_gravity="center"
                android:contentDescription="@string/fumSensible"/>

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/fvert"
                android:layout_gravity="center"
                android:contentDescription="@string/fumFav"/>

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/fgris"
                android:layout_gravity="center"
                android:contentDescription="@string/fumInif"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:orientation="vertical"
            android:weightSum="1"
            android:focusable="true">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:text="@string/discussion"
                android:textAlignment="center"
                android:textColor="@color/bleu"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="0.15"
                app:srcCompat="@drawable/prouge"
                android:layout_gravity="center"
                android:contentDescription="@string/discuFaible"/>

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/pvert"
                android:layout_gravity="center"
                android:contentDescription="@string/discuBien"/>

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/pgris"
                android:layout_gravity="center"
                android:contentDescription="@string/discuMoy"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <Button
            android:id="@+id/button10"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:textSize="20sp"
            android:background="@color/bleu"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</FrameLayout>