<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:text="@string/action_subscribe_short"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText14"
        android:layout_alignStart="@+id/editText14"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:text="@string/h"
        android:textAlignment="center"
        android:textColor="@color/buee"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText14"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/radioButton3"
        android:layout_toRightOf="@+id/radioButton3"
        android:text="@string/f"
        android:textAlignment="center"
        android:textColor="@color/MyRose"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:layout_below="@+id/radioButton3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText14"
        android:layout_alignStart="@+id/editText14"
        android:layout_below="@+id/editText14"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/prenom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText20"
        android:layout_alignStart="@+id/editText20"
        android:layout_below="@+id/editText20"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/mdp"
        android:drawableRight="@drawable/lock"
        android:drawableEnd="@drawable/lock"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText20"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText15"
        android:layout_alignStart="@+id/editText15"
        android:layout_below="@+id/editText15"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:drawableRight="@drawable/mail"
        android:drawableEnd="@drawable/mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText21"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText22"
        android:layout_alignStart="@+id/editText22"
        android:layout_below="@+id/editText22"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/annee"
        android:inputType="date" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/checkBox"
        android:background="@color/bleu"
        android:text="@string/valider"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText22"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText17"
        android:layout_alignStart="@+id/editText17"
        android:layout_below="@+id/editText17"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/confMDP"
        android:drawableRight="@drawable/lock"
        android:drawableEnd="@drawable/lock"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText21"
        android:layout_alignStart="@+id/editText21"
        android:layout_below="@+id/editText21"
        android:text="@string/cgu"
        android:textAlignment="center"
        android:textColor="@color/DarkBlueGray"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="normal" />

</RelativeLayout>