
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:weightSum="1"
        android:focusable="true">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/TVehicule"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingTop="40dp"
            android:focusable="true">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/photoV"
                android:layout_marginTop="12dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:text="@string/marque"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:text="@string/modele"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:text="@string/couleur"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/button8"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="30dp"
                    android:layout_height="10dp"
                    android:layout_weight="0.04"
                    android:background="@android:drawable/ic_delete"
                    android:contentDescription="@string/supprimeV"/>

                <ImageButton
                    android:id="@+id/buttond"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="30dp"
                    android:layout_height="10dp"
                    android:layout_weight="0.04"
                    android:background="@android:drawable/ic_menu_edit"
                    android:contentDescription="@string/modifV"/>
            </LinearLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/editText3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/immat"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/marque"
            android:inputType="textPersonName"
            android:textColor="@color/gris" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/modele"
            android:inputType="textPersonName"
            android:textColor="@color/gris" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/couleur"
            android:inputType="textPersonName"
            android:textColor="@color/gris" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPhoto"
            android:textColor="@android:color/black"
            android:layout_marginTop="12dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/addPhoto"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimaryBlue"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            android:contentDescription="@string/add" />

    </LinearLayout>
</ScrollView>